# putergenai-primal

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Putergenaionly.py  README.md  SECURITY.md  pyproject.toml  pytest.ini  requirements.txt
.github/: dependabot.yml
.github/workflows/: autofix-main.yml  ci.yml  codeql.yml  dependency-update.yml  pre-commit.yml  release.yml  security.yml  test.yml
docs/: CI_CD.md  api.md  installation.md
examples/: Conversations-history-permodel.py  PrimalCore-PuterGenAI1.1  PuterGenUpdate.py  Pydroid3-PrimalCore.py  example-parse.py  example-ui.py  example.py
putergenai/: example.py  setup.py
putergenai/putergenai/: __init__.py  client.py
src/putergenai/: __init__.py  cli.py  putergenai.py
tests/: conftest.py  test_ai_chat.py  test_ai_utilities.py  test_auth.py  test_client.py  test_filesystem.py  test_models.py  test_validators.py
