[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "putergenai"
version = "1.5.1"
authors = [
    { name = "Nerve11", email = "putergenai@outlook.com" },
    { name = "BubblesTheDev", email = "bubblesthedev@fnbubbles420.org" },
]
description = "A Python client for the Puter API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["puter", "ai", "sdk", "python", "api", "chat", "gpt", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests==2.32.5",
    "pillow==12.0.0",
    "customtkinter==5.2.2",
    "cryptography==46.0.3",
    "flask==3.1.2",
    "keyring==25.7.0",
]

[project.urls]
"Homepage" = "https://github.com/Nerve11/putergenai"
"Documentation" = "https://github.com/Nerve11/putergenai#readme"
"Repository" = "https://github.com/Nerve11/putergenai.git"
"Bug Tracker" = "https://github.com/Nerve11/putergenai/issues"
"Security Policy" = "https://github.com/Nerve11/putergenai/security/policy"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]

[tool.setuptools]
packages = ["putergenai"]
package-dir = { "" = "src" }

[tool.black]
line-length = 100
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
