#!filepath pyproject.toml
[build-system]
requires = ["setuptools>=80.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "putergenai"
version = "2.0.2"
authors = [
    { name = "Nerve11", email = "putergenai@outlook.com" },
    { name = "BubblesTheDev", email = "bubblesthedev@fnbubbles420.org" },
]
description = "An asynchronous Python client for the Puter API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["puter", "ai", "sdk", "python", "api", "chat", "gpt", "claude", "async", "aiohttp"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp>=3.11.0",
    "aiofiles>=24.1.0",
    "certifi>=2024.0.0",
    "pillow>=11.0.0",
    "customtkinter>=5.2.2",
    "cryptography>=44.0.0",
    "flask>=3.1.2",
    "keyring>=25.5.0",
]

[project.urls]
"Homepage" = "https://github.com/Nerve11/putergenai"
"Documentation" = "https://github.com/Nerve11/putergenai#readme"
"Repository" = "https://github.com/Nerve11/putergenai.git"
"Bug Tracker" = "https://github.com/Nerve11/putergenai/issues"
"Security Policy" = "https://github.com/Nerve11/putergenai/security/policy"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1",
    "black>=24.0",
    "flake8>=7.0",
    "mypy>=1.8",
]

[tool.setuptools]
packages = ["putergenai"]
package-dir = { "" = "src" }

[tool.black]
line-length = 100
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
